changed calls to suit their repos. Now tracks usecase uses tracksRepo, albumRepo and artistRepo for population of info in struct
